Corrected spacings in index.html

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   justify-content: center;
   align-content: center;
   height: 100%;
-  background-image: url(images/sunset.jpg);
+  background-image: url(images/LandingPage.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -73,7 +73,7 @@ div.btnbg {
 .form-control:focus {
   outline: 0 !important;
   border-color: initial;
-  box-shadow: none;
+  box-shadow: none !important;
 }
 
 a {
@@ -185,23 +185,23 @@ h6 {
   background: rgba(0, 0, 0, 0.5);
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
-  margin-top: 1rem;
+  margin: 1rem 0px;
   display: flex;
   justify-content: flex-end;
   flex-direction: column;
 }
 
 .blur-landing {
-  width: 40%;
+  width: 580px;
   height: 95vh;
   backdrop-filter: blur(9px);
   background: rgba(0, 0, 0, 0.5);
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
-  margin-top: 1rem;
   display: flex;
   justify-content: flex-end;
   flex-direction: column;
+  margin: 1rem 2rem;
 }
 
 .btn-main-half {
@@ -222,6 +222,7 @@ h6 {
   background: #e4423d;
   box-shadow: 0px 4px 16px #8a0e0a;
   border-radius: 8px;
+  text-align: center;
 }
 
 .buttons {
